# Hone

./: .gitignore  FORGE_EVOLUTION.md  HONE_EVOLUTION.md  Hone-Dashboard-App-2026-05-13-122127.html  README.md  RETROSPECTIVE.md  USAGE.md  build.ts  build.ts.backup  fix.js  hone.ps1  hone.sh  latest  package.json  repair_syntax.ts  test-deepseek.cjs  test_output.txt  tsconfig.json
.antigravitycli/: de9bd646-8b17-46e9-bb36-1d65e02cb72e.json
.claude/: settings.local.json
.github/workflows/: gh-pages.yml
desktop/: package-lock.json  package.json  tsconfig.node.json  vite.config.ts
desktop/scripts/: render-icon.mjs
desktop/src/: App.tsx  index.html
desktop/src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  gateway_manager.rs  lib.rs  machine_registry.rs  main.rs  mdns_discovery.rs  pty_manager.rs  scheduler.rs  secret_store.rs  ssh_tunnel.rs  windows_git_bash.rs  windows_proxy.rs
desktop/target2/: .rustc_info.json
landing/: index.html
relay/: DEPLOY.md  PROTOCOL.md  build-assets.mjs  client.html  generated-assets.js  manifest.json  package-lock.json  package.json  relay-room.js  sw.js  test-auth.mjs  test-e2e.mjs  test-proxy.mjs  test-relay-room.mjs  test-relay.mjs  worker.js  wrangler.toml
scratch/: repro_deadlock.tsx
scripts/: postinstall.js
src/: QueryEngine.ts  bundle-shim.js  commands.ts  context.ts  interactiveHelpers.tsx  main.tsx  query.ts  setup.ts  tasks.ts  tools.ts
src/bootstrap/: state.ts
src/bridge/: bridgeEnabled.ts  bridgeMain.ts  envLessBridgeConfig.ts  initReplBridge.ts  remoteBridgeCore.ts  trustedDevice.ts
src/buddy/: CompanionSprite.tsx  buddySync.ts  companion.ts  prompt.ts  useBuddyNotification.tsx
src/canvas/: server.ts  tool.ts
src/cli/: bg.ts  print.ts  structuredIO.ts  update.ts
src/commands/: brief.ts  commit-push-pr.ts  commit.ts  init.ts  insights.ts  install.tsx  review.ts  security-review.ts  statusline.tsx  ultraplan.tsx  version.ts
src/components/: App.tsx  AutoUpdaterWrapper.tsx  BypassPermissionsModeDialog.tsx  ClaudeInChromeOnboarding.tsx  ClaudeMdExternalIncludesDialog.tsx  ConsoleOAuthFlow.tsx  ContextVisualization.tsx  Feedback.tsx  IdeOnboardingDialog.tsx  Message.tsx  Messages.tsx  Spinner.tsx  (+12 more)
vscode-extension/: extension.js  package.json
(+397 files in other folders)
